// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example frontpage/App.svelte > should render 1`] = `
{
  "body": "<!--[--><strong><!--[-1-->Hello, ⁨Anna⁩!<!--]--><!----></strong> <p><!--[-1-->⁨Anna⁩ ⁨added ⁨3⁩ new photos⁩ to ⁨her stream⁩.<!--]--><!----></p><!--]-->",
  "head": "",
  "html": "<!--[--><strong><!--[-1-->Hello, ⁨Anna⁩!<!--]--><!----></strong> <p><!--[-1-->⁨Anna⁩ ⁨added ⁨3⁩ new photos⁩ to ⁨her stream⁩.<!--]--><!----></p><!--]-->",
}
`;

exports[`Example localize/attributes/App.svelte > should render 1`] = `
{
  "body": "<!--[--><button>Show prompt</button><!--]-->",
  "head": "",
  "html": "<!--[--><button>Show prompt</button><!--]-->",
}
`;

exports[`Example localize/dynamic-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><button>Say hello</button><!--]-->",
  "head": "",
  "html": "<!--[--><button>Say hello</button><!--]-->",
}
`;

exports[`Example localize/static-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><button>Say hello</button><!--]-->",
  "head": "",
  "html": "<!--[--><button>Say hello</button><!--]-->",
}
`;

exports[`Example localized/attributes/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[0--><div>Please confirm the action.</div> <div><button>Ok</button> <button>Cancel</button></div><!----><!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[0--><div>Please confirm the action.</div> <div><button>Ok</button> <button>Cancel</button></div><!----><!--]--><!--]-->",
}
`;

exports[`Example localized/attributes-with-variables/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[0--><div>Please confirm the action for ⁨20⁩ items.</div> <div><button>Yes, perform action for ⁨20⁩ items</button> <button>Cancel</button></div><!----><!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[0--><div>Please confirm the action for ⁨20⁩ items.</div> <div><button>Yes, perform action for ⁨20⁩ items</button> <button>Cancel</button></div><!----><!--]--><!--]-->",
}
`;

exports[`Example localized/dynamic-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->You have ⁨10⁩ unread emails.<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->You have ⁨10⁩ unread emails.<!--]--><!--]-->",
}
`;

exports[`Example localized/static-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
}
`;

exports[`Example localized-legacy/attributes/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[0--><!--[--><div>Please confirm the action.</div> <div><button>Ok</button> <button>Cancel</button></div><!--]--><!----><!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[0--><!--[--><div>Please confirm the action.</div> <div><button>Ok</button> <button>Cancel</button></div><!--]--><!----><!--]--><!--]-->",
}
`;

exports[`Example overlay/dynamic-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><svelte-fluent-overlay style="display: contents;"></svelte-fluent-overlay><!--]-->",
  "head": "<!--[hash removed]--><template><a data-l10n-name="release-notes" href="https://example.com/" target="_blank" rel="noreferrer"></a><!----></template><!---->",
  "html": "<!--[--><svelte-fluent-overlay style="display: contents;"></svelte-fluent-overlay><!--]-->",
}
`;

exports[`Example overlay/static-text/App.svelte > should render 1`] = `
{
  "body": "<!--[--><svelte-fluent-overlay style="display: contents;"></svelte-fluent-overlay><!--]-->",
  "head": "<!--[hash removed]--><template><a data-l10n-name="link" href="https://example.com/"></a><!----></template><!---->",
  "html": "<!--[--><svelte-fluent-overlay style="display: contents;"></svelte-fluent-overlay><!--]-->",
}
`;

exports[`Example provider/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[--><!--[-1-->Hello, world!<!--]--><!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[--><!--[-1-->Hello, world!<!--]--><!--]--><!--]-->",
}
`;

exports[`Example tutorial/attributes/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[0--><label>Login <input type="email" placeholder="email@example.com" title="Type your login email" aria-label="Login input value"/></label><!----><!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[0--><label>Login <input type="email" placeholder="email@example.com" title="Type your login email" aria-label="Login input value"/></label><!----><!--]--><!--]-->",
}
`;

exports[`Example tutorial/first-steps/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
}
`;

exports[`Example tutorial/interpolation/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->Hello, ⁨everyone⁩!<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->Hello, ⁨everyone⁩!<!--]--><!--]-->",
}
`;

exports[`Example tutorial/interpolation-custom-functions/App.svelte > should render 1`] = `
{
  "body": "<!--[--><div><!--[-1-->Weekday ⁨2⁩ is ⁨Tuesday⁩<!--]--><!----></div> <div><!--[-1-->Weekday of ⁨2/6/2024⁩ is ⁨Tuesday⁩<!--]--><!----></div><!--]-->",
  "head": "",
  "html": "<!--[--><div><!--[-1-->Weekday ⁨2⁩ is ⁨Tuesday⁩<!--]--><!----></div> <div><!--[-1-->Weekday of ⁨2/6/2024⁩ is ⁨Tuesday⁩<!--]--><!----></div><!--]-->",
}
`;

exports[`Example tutorial/interpolation-formatting/App.svelte > should render 1`] = `
{
  "body": "<!--[--><div><!--[-1-->Your DPI ratio is ⁨1.778⁩<!--]--><!----></div> <div><!--[-1-->Your account balance is ⁨$1,234.56⁩<!--]--><!----></div> <div><!--[-1-->Today is ⁨September 13, 2022⁩<!--]--><!----></div><!--]-->",
  "head": "",
  "html": "<!--[--><div><!--[-1-->Your DPI ratio is ⁨1.778⁩<!--]--><!----></div> <div><!--[-1-->Your account balance is ⁨$1,234.56⁩<!--]--><!----></div> <div><!--[-1-->Today is ⁨September 13, 2022⁩<!--]--><!----></div><!--]-->",
}
`;

exports[`Example tutorial/multi-language/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
}
`;

exports[`Example tutorial/translation-files/App.svelte > should render 1`] = `
{
  "body": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
  "head": "",
  "html": "<!--[--><!--[-1-->Hello, world!<!--]--><!--]-->",
}
`;
